# prancing-pony

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 254cdf93e520_add_cascade_delete_to_event_summaries.py  5129f15bfe3e_add_events_and_meetings_tables.py  cde352d1428d_initial_migration_with_vendors_and_.py  d9089e623c5c_add_event_summaries_table.py
app/: config.py  database.py  main.py
app/api/: customers.py  events.py
app/models/: __init__.py  customer.py  event.py  event_summary.py
app/services/: customer_service.py  event_service.py  llm_logger.py  llm_service.py  schemas.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  config.ts
frontend/src/components/: CustomerFormModal.tsx
frontend/src/pages/: AddEvent.tsx  CustomerDetails.tsx  Customers.tsx  Home.tsx
prompts/: extract_participants.txt  meeting_summary.txt
scripts/: export_db.py  import_db.py
test_data/: test_data.json
