[tool.poetry]
name = "the-prancing-pony"
version = "0.1.0"
description = "The Prancing Pony - Vendor-Customer Relationship Tracking Application"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlalchemy = "^2.0.36"
pydantic = {extras = ["email"], version = "^2.10.0"}
pydantic-settings = "^2.6.0"
python-dotenv = "^1.0.1"
anthropic = "^0.39.0"
openai = "^1.54.0"
alembic = "^1.14.0"
langchain = "^0.3.9"
langchain-openai = "^0.2.10"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
